// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Note form renders add if no note prop 1`] = `
<NoteForm
  onComplete={[MockFunction]}
>
  <form
    onSubmit={[Function]}
  >
    <label>
      Title: 
      <input
        name="title"
        onChange={[Function]}
        value=""
      />
    </label>
    <br />
    <label>
      Content: 
      <br />
      <textarea
        cols="40"
        name="content"
        onChange={[Function]}
        rows="3"
        value=""
      />
    </label>
    <p>
      <button
        type="submit"
      >
        Submit
      </button>
    </p>
  </form>
</NoteForm>
`;

exports[`Note form renders add if no note prop 2`] = `
<NoteForm
  onComplete={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "completed": false,
            "content": "Reacting to React",
            "title": "ACL",
          },
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": Promise {},
        },
      ],
    }
  }
>
  <form
    onSubmit={[Function]}
  >
    <label>
      Title: 
      <input
        name="title"
        onChange={[Function]}
        value="ACL"
      />
    </label>
    <br />
    <label>
      Content: 
      <br />
      <textarea
        cols="40"
        name="content"
        onChange={[Function]}
        rows="3"
        value="Reacting to React"
      />
    </label>
    <p>
      <button
        type="submit"
      >
        Submit
      </button>
    </p>
  </form>
</NoteForm>
`;

exports[`Note form renders edit if note prop 1`] = `
<NoteForm
  note={
    Object {
      "completed": false,
      "content": "A nice note.",
      "key": "key",
      "title": "A note",
    }
  }
  onCancel={[MockFunction]}
  onComplete={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "completed": false,
            "content": "A great note!",
            "key": "key",
            "title": "A note",
          },
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": Promise {},
        },
      ],
    }
  }
>
  <form
    onSubmit={[Function]}
  >
    <label>
      Title: 
      <input
        name="title"
        onChange={[Function]}
        value="A note"
      />
    </label>
    <br />
    <label>
      Content: 
      <br />
      <textarea
        cols="40"
        name="content"
        onChange={[Function]}
        rows="3"
        value="A great note!"
      />
    </label>
    <p>
      <button
        type="submit"
      >
        Submit
      </button>
      <button
        onClick={[MockFunction]}
        type="button"
      >
        Cancel
      </button>
    </p>
  </form>
</NoteForm>
`;
